mongo can now get data from before a timestamp. This is for the upcoming cronjob. You can now create channel, delete channel (this also deletes data), look at a channels details and edit the description and days-restriction for the channel.

--- a/BachelorModelViewController/Views/Channel/Create.cshtml
+++ b/BachelorModelViewController/Views/Channel/Create.cshtml
@@ -68,7 +68,7 @@
         <div class="form-group">
             <label asp-for="DaysRestriction" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input type="number" min="0" asp-for="DaysRestriction" class="form-control" />
+                <input type="number" min="0" max="365" asp-for="DaysRestriction" class="form-control" />
                 <span asp-validation-for="DaysRestriction" class="text-danger"></span>
             </div>
         </div>
