--- a/BachelorModelViewController/Views/Channel/Delete.cshtml
+++ b/BachelorModelViewController/Views/Channel/Delete.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore;
 
-@model DeleteViewModel
+@model ChannelViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,7 +12,6 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>DeleteViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="Id" />
