--- a/BachelorModelViewController/Views/Channel/Edit.cshtml
+++ b/BachelorModelViewController/Views/Channel/Edit.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore;
 
-@model EditViewModel
+@model ChannelViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,15 +12,13 @@
 
 <form asp-action="Edit">
     <div class="form-horizontal">
-        <h4>EditViewModel</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
         <div class="form-group">
             <label asp-for="Name" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                @Html.DisplayFor(x => x.Name);
             </div>
         </div>
         <div class="form-group">
@@ -31,31 +29,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="UserId" class="control-label col-md-2"></label>
+            <label min="0" max="365" asp-for="DaysRestriction" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="GroupId" class="control-label col-md-2"></label>
-            <div class="col-md-10">
-                <select asp-for="GroupId" class="form-control" asp-items="ViewBag.GroupId"></select>
-                <span asp-validation-for="GroupId" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="AccessRestriction" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="AccessRestriction" class="form-control" />
-                <span asp-validation-for="AccessRestriction" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="JsonContentAsString" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="JsonContentAsString" class="form-control" />
-                <span asp-validation-for="JsonContentAsString" class="text-danger"></span>
+                <input asp-for="DaysRestriction" class="form-control" />
+                <span asp-validation-for="DaysRestriction" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
@@ -67,6 +44,7 @@
 </form>
 
 <div>
+    <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a><br />
     <a asp-action="Index">Back to List</a>
 </div>
 
