--- a/BachelorModelViewController/Views/Channel/Create.cshtml
+++ b/BachelorModelViewController/Views/Channel/Create.cshtml
@@ -56,6 +56,11 @@
             <div class="col-md-10">
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+                
+                @if (Model.DuplicateName != null)
+                {
+                    <span  class="text-danger">The channel name is already in use</span>
+                }
             </div>
         </div>
         <div class="form-group">
