--- a/BachelorModelViewController/Views/Channel/AccessibleChannels.cshtml
+++ b/BachelorModelViewController/Views/Channel/AccessibleChannels.cshtml
@@ -104,4 +104,24 @@
         </tbody>
     </table>
     }
-        
+    else
+    {
+
+        <table class="table table-responsive">
+            <thead>
+                <tr>
+                    <th>
+                        Un-restricted Channels
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        There are currently no un-restricted data channels.
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    }
+
