--- a/BachelorModelViewController/Views/Home/Index.cshtml
+++ b/BachelorModelViewController/Views/Home/Index.cshtml
@@ -20,16 +20,12 @@
             <div class="col-md-6 col-sm-12">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <h5>Results</h5>
+                        <h5>Resumé</h5>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <ul>
-                            <li>First Item</li>
-                            <li>Second Item</li>
-                            <li>Third Item</li>
-                        </ul>
+                        <p>Short resumé of the platform.</p>
                     </div>
                 </div>
             </div>
@@ -47,9 +43,8 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <ul>
-                            <li>Github-link</li>
-                            <li>.NET Core-link</li>
-                            <li>Docker-link</li>
+                            <li><a>Github-link</a></li>
+                            <li><a>Docker-link</a></li>
                         </ul>
                     </div>
                 </div>
